src/components/Header/Header.css
header {
	height: 120px;
	background-image: url('/dark2.png');
	background-size: contain;
	background-repeat: no-repeat;
	background-position: left 40px top 0;
	box-shadow: #4a8b53 0px 0px 10px;
	position: relative;
}

header h1 {
	text-align: center;
	margin: 0;
	padding-top: 30px;
	font-size: 50px;
}

.link {
  margin: 0 20px;
}

.logthumb {
	position: absolute;
	top: 10px;
	right: 10px;
	padding: 5px 10px;
	border-radius: 5px;
	font-size: 14px;
	& img {
		width: 20px;
		margin-left: 10px;
		cursor: pointer;
	}
	& .logLabel {
		display: flex;
		align-items: center;
		cursor: pointer;
		border: none;
		background: none;
		padding: 0;
		font: inherit;
		color: inherit;
		& .logAvatar {
			height: 30px;
			width: 30px;
			border-radius: 15px;
			border: 1px solid;
			overflow: hidden;
			margin-left: 0;
			margin-right: 6px;
		}
	}
	& .logout-btn {
		border: none;
		background: none;
		padding: 0;
		line-height: 0;
		cursor: pointer;
	}
	& .box {
		margin-top: 4px;
		background-color: #131410;
	}
}
.logthumb:not(.expanded) {
	& .box, a, & .box button {
		cursor: unset;
		pointer-events: none;
	}
}

.logMenu {
	margin-top: 6px;
	padding: 0 6px;
	opacity: 0;
	transition: opacity .2s ease-out;
}
.expanded .logMenu {
	opacity: 1;
}

.menuItem {
	padding: 6px 0;
	display:grid;
	grid-template-rows: 0fr;
	transition: grid-template-rows .2s ease-out;
  overflow: hidden;
	& span, & button {
		min-height: 0;
	}
}

button.menuItem {
	border: none;
	background: none;
	font: inherit;
	color: inherit;
	width: 100%;
	text-align: left;
	cursor: pointer;
	padding: 0;
}

.logthumb.expanded .menuItem {
	grid-template-rows: 1fr;
}

